MDEV-15988 Crash in ./mtr mariabackup.undo_space_id

xb_assign_undo_space_start(): Correctly pass the length of
the buffer, so that the file name will not be truncated.